--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -47,5 +47,9 @@ spring.web.resources.static-locations=classpath:/static/,file:uploads/
 spring.thymeleaf.cache=false
 spring.web.resources.cache.period=0
 spring.web.resources.chain.cache=false
+spring.devtools.restart.enabled=true
+spring.devtools.livereload.enabled=true
+spring.web.resources.cache.cachecontrol.no-cache=true
+
 
 
