--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -43,7 +43,7 @@ spring.servlet.multipart.enabled=true
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=20MB
 
-spring.web.resources.static-locations=classpath:/static/,file:uploads/
+spring.web.resources.static-locations=classpath:/static/,file:./uploads/
 spring.thymeleaf.cache=false
 spring.web.resources.cache.period=0
 spring.web.resources.chain.cache=false
