--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -52,4 +52,9 @@ spring.devtools.livereload.enabled=true
 spring.web.resources.cache.cachecontrol.no-cache=true
 
 
+# ======================
+# Script SQL (schema.sql e data.sql)
+# ======================
+spring.sql.init.mode=always
+spring.jpa.defer-datasource-initialization=true
 
